# mewt

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  build.rs  dist-workspace.toml  flake.nix  justfile
.beads/: issues.jsonl  mewt.db
.claude/skills/add-language-support/: SKILL.md
.config/: wt.toml
.github/: CODEOWNERS  dependabot.yml
.sqlx/: query-292fb1cb7ec2fb5bbea56d077dddcc88061f24262040b250c26e4930985f9e66.json  query-5743f6741d6170415a4d60e969b3ad7e114c59e8ac585a0a80057f1085990019.json  query-bb1f87d12a58acac5ac66b53f472cfb03605c776deabe4fe4c04b2fb91089565.json
docs/: adding-a-language.md  building-from-source.md  configuration.md  how-it-works.md
grammars/: update.sh
grammars/go/: VENDORED_COMMIT  VENDORED_METADATA  vendor.json
grammars/javascript/: vendor.json
grammars/rust/: VENDORED_COMMIT  VENDORED_METADATA  vendor.json
grammars/solidity/: VENDORED_COMMIT  VENDORED_METADATA  vendor.json
grammars/tolk/: grammar.js  vendor.json
grammars/tsx/: vendor.json
grammars/typescript/: vendor.json
src/: example.toml  lib.rs  main.rs
src/core/: cli.rs  logging.rs  main_shared.rs  mod.rs  registry.rs  runner.rs  store.rs
src/languages/: mod.rs
tests/: display.rs  go_tests.rs  javascript_tests.rs  rust_tests.rs  solidity_tests.rs
tests/go/: integration_tests.rs
tests/javascript/: integration_tests.rs
tests/rust/: comment_ignorance_tests.rs  integration_tests.rs  mod.rs  mutation_tests.rs  parser_tests.rs
tests/solidity/: comment_ignorance_tests.rs  integration_tests.rs  mutation_tests.rs  parser_tests.rs
tests/tolk/: integration_tests.rs
(+59 files in other folders)
