[package]
name = "mewt"
version = "1.1.0"
edition = "2024"

description = "Mutation testing framework with multi-language support"

authors = ["Bo Henderson <bo.henderson@trailofbits.com>"]
license = "AGPL-3.0"
repository = "https://github.com/trailofbits/mewt"
homepage = "https://github.com/trailofbits/mewt"
keywords = ["mutation", "testing"]
categories = ["development-tools::testing", "security"]

[lib]
name = "mewt"
path = "src/lib.rs"

[[bin]]
name = "mewt"
path = "src/main.rs"

[dependencies]
# Shared dependencies across all crates
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.37", features = ["derive"] }
console = "0.16"
ctrlc = { version = "3.4.6", features = ["termination"] }
dirs-next = "2.0"
fern = "0.7.1"
glob = "0.3"
globset = "0.4"
hex = "0.4.3"
indicatif = "0.18"
log = "0.4.28"
once_cell = "1.19"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
similar = { version = "2.4.0", features = ["inline", "unicode"] }
sqlx = { version = "0.8.5", features = ["runtime-tokio", "sqlite"] }
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
toml = "0.8"
tree-sitter = "0.25"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.12"
pretty_assertions = "1.4"
tokio-test = "0.4"

[build-dependencies]
cc = "1.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
